# fund-quant-assistant

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/db/: models.py  session.py
backend/app/repositories/: portfolio.py
backend/app/schemas/: analysis.py  backtest.py  funds.py  ocr.py  opportunities.py  portfolio.py  settings.py  signals.py
backend/app/services/: analysis.py  backtest_engine.py  data_sync.py  factor_style.py  fund_catalog.py  fund_classifier.py  fund_code_resolver.py  fund_purchase_limits.py  fund_rankings.py  fund_recommendations.py  macro.py  (+12 more)
backend/tests/: conftest.py  test_action_classifier.py  test_adaptive_weights.py  test_api_analysis.py  test_api_backtest.py  test_api_funds.py  test_api_ocr.py  test_api_opportunities.py  test_api_portfolio.py  test_api_settings.py  test_api_style.py  test_api_sync_logs.py  test_backtest_engine.py  test_consolidation.py  test_consolidation_block.py  test_daily_history.py  test_data_sync.py  test_data_sync_logging.py  test_db_models.py  test_factor_style.py  test_fund_catalog.py  test_fund_code_resolver.py  test_fund_purchase_limits.py  test_fund_recommendations.py  test_fund_themes.py  test_health.py  test_holdings_revalue.py  test_intra_category.py  test_intra_category_reduce.py  test_llm_interpreter.py  test_macro.py  test_metrics.py  test_metrics_cache.py  test_min_trade.py  test_nav_acc_usage.py  test_nav_incremental.py  test_nav_jump_detection.py  test_ocr_parsers.py  test_ocr_pipeline.py  test_opportunities.py  (+15 more)
(+134 files in other folders)
