[project]
name = "fund-quant-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "akshare>=1.14.0",
  "httpx>=0.27.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]
ocr = ["paddleocr>=2.9.0", "paddlepaddle>=3.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
